horizontal scroll bar on mobile bug fixed

--- a/components/UIs/css/swiper/SwiperContainer.module.css
+++ b/components/UIs/css/swiper/SwiperContainer.module.css
@@ -16,6 +16,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    margin: 0 15px;
 }
 
 .nextButton {
@@ -34,6 +35,13 @@
     display: none;
 }
 
+@media (min-width: 576px) {
+    .swiperListWrapper {
+        display: flex;
+        overflow-y: hidden;
+    }
+}
+
 @media (min-width: 992px) {
     .nextButton {
         display: block;
@@ -42,7 +50,19 @@
     .previousButton  {
         display: block;
     }
+
+    .swiperListWrapper {
+       display: flex;
+        overflow-y: hidden;
+    }
 }
+
+.swiperListWrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 
 
 
